--- a/parser/build.gradle
+++ b/parser/build.gradle
@@ -7,12 +7,20 @@ version '0.0.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "com.squareup.moshi:moshi-kotlin:1.9.2"
-    implementation 'com.squareup.moshi:moshi-adapters:1.9.2'
+    implementation "com.squareup.moshi:moshi-adapters:1.9.2"
+
+    testImplementation "org.junit.jupiter:junit-jupiter:5.6.0"
+    testImplementation "org.amshove.kluent:kluent:1.59"
+}
+
+test {
+    useJUnitPlatform()
 }
 
 compileKotlin {
